[package]
name = "elys-bindings-test"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
elys-bindings = { path = "../bindings", features = ["testing"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
anyhow = "1"
thiserror = "1.0"
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.1.4"
cw-multi-test = "0.13.4"

[dev-dependencies]
cargo-husky.workspace = true