[package]
name = "elys-bindings"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []
interface = ["dep:cw-orch"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.1.4"
cw-orch = { version = "0.19.1", optional = true }

