[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw-orch = { version = "0.19.1" }
account-history-contract = { path = "../contracts/account-history-contract" }
financial_snapshot_contract = { path = "../contracts/financial-snapshot-contract" }
trade_shield_contract = { path = "../contracts/trade-shield-contract" }
elys-bindings = { path = "../bindings" }
cw-utils = "0.13"
semver = "1.0.21"
