[package]
name = "account-history-contract"
version = "0.30.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["debug"]
debug = []

[dependencies]
cosmwasm-schema = { version = "1.1.4", default-features = false }
cosmwasm-std = { version = "1.1.4", features = [
    "staking",
], default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = { version = "0.15.1", default-features = false, features = [
    "iterator",
] }
thiserror = { version = "1", default-features = false }
schemars = { default-features = false, version = "0.8.1" }
cw-utils = { version = "0.13", default-features = false }
cw2 = { version = "1.0.1" }
elys-bindings = { path = "../../bindings" }
chrono = { version = "0.4.33", default-features = false, features = ["alloc"] }


[dev-dependencies]
trade_shield_contract = { path = "../trade-shield-contract" }
cw-multi-test = "0.13.4"
serde_json = "1.0.107"
elys-bindings = { path = "../../bindings", features = ["testing"] }
elys-bindings-test = { path = "../../bindings-test" }
anyhow = "1"
account-history-contract = { path = ".", features = ["debug"] }
cargo-husky.workspace = true
