[package]
name = "financial_snapshot_contract"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
interface = ["dep:cw-orch"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.1.4", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.15.1"
thiserror = "1"
schemars = "0.8.1"
cosmwasm-schema = "1.1.4"
cw-utils = "0.13"
anyhow = "1"
elys-bindings = { path = "../../bindings" }
cw-orch = { version = "0.19.1", optional = true }

[dev-dependencies]
cw-multi-test = "0.13.4"
elys-bindings = { path = "../../bindings", features = ["testing"] }
