[package]
name = "financial_snapshot_contract"
version = "0.2.20"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.1.4", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "1.2.0"
thiserror = "1"
schemars = "0.8.1"
cosmwasm-schema = "1.1.4"
cw-utils = "0.13"
cw2 = { version = "1.0.1" }
anyhow = "1"
elys-bindings = { path = "../../bindings" }
semver = "1.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
elys-bindings = { path = "../../bindings", features = ["testing"] }
elys-bindings-test = { path = "../../bindings-test" }
cargo-husky.workspace = true

